// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks spinner as error with mark: CI 1`] = `
"[33m-[39m #error
[33m-[39m #error
[33m-[39m #error
! #error
"
`;

exports[`marks spinner as error with mark: Local 1`] = `
"[?25l[1G[33m⠋[39m #error[?25l[1G[2K[1G[33m⠙[39m #error[?25l[1G[2K[1G[33m⠹[39m #error[1G[2K[1G! #error
[?25h"
`;

exports[`marks spinner as error with message: CI 1`] = `
"[33m-[39m #error
[33m-[39m #error
[33m-[39m #error
[31m✖[39m Error
"
`;

exports[`marks spinner as error with message: Local 1`] = `
"[?25l[1G[33m⠋[39m #error[?25l[1G[2K[1G[33m⠙[39m #error[?25l[1G[2K[1G[33m⠹[39m #error[1G[2K[1G[31m✖[39m Error
[?25h"
`;

exports[`marks spinner as error: CI 1`] = `
"[33m-[39m #error
[33m-[39m #error
[33m-[39m #error
[31m✖[39m #error
"
`;

exports[`marks spinner as error: Local 1`] = `
"[?25l[1G[33m⠋[39m #error[?25l[1G[2K[1G[33m⠙[39m #error[?25l[1G[2K[1G[33m⠹[39m #error[1G[2K[1G[31m✖[39m #error
[?25h"
`;
